<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2013-2021 Contributors to the Eclipse Foundation
  ~
  ~ See the NOTICE file(s) distributed with this work for additional
  ~ information regarding copyright ownership.
  ~
  ~ This program and the accompanying materials are made available under the
  ~ terms of the Eclipse Public License 2.0 which is available at
  ~ http://www.eclipse.org/legal/epl-2.0, or the Apache Software License 2.0
  ~ which is available at https://www.apache.org/licenses/LICENSE-2.0.
  ~
  ~ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.eclipse.winery</groupId>
    <artifactId>winery</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Winery</name>
    <description>
        Winery is a Web-based environment to graphically model TOSCA topologies and plans managing these topologies.
    </description>
    <url>https://eclipse.github.io/winery</url>
    <organization>
        <name>Eclipse.org - Winery Project</name>
        <url>https://www.eclipse.org/winery</url>
    </organization>
    <inceptionYear>2012</inceptionYear>
    <mailingLists>
        <mailingList>
            <name>Winery Developer List</name>
            <post>winery-dev@eclipse.org</post>
            <archive>http://dev.eclipse.org/mhonarc/lists/winery-dev</archive>
        </mailingList>
    </mailingLists>
    <licenses>
        <license>
            <name>Eclipse Public License v2.0</name>
            <url>http://www.eclipse.org/legal/epl-v20.html</url>
            <distribution>repo</distribution>
            <comments>Standard Eclipse Licence</comments>
        </license>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <developerConnection>scm:git:https://github.com/eclipse/winery.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <github.global.server>github</github.global.server>
        <main.basedir>${project.basedir}</main.basedir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
        <maven.checkstyle.version>3.1.1</maven.checkstyle.version>
        <checkstyle.addons.version>6.0.1</checkstyle.addons.version>
        <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jacoco.reportPath>${project.build.directory}/jacoco.exec</jacoco.reportPath>
        <jacoco.append>false</jacoco.append>

        <!-- versions of all used libraries -->
        <ch.qos.logback.logback-classic.version>1.2.3</ch.qos.logback.logback-classic.version>
        <com.fasterxml.jackson>2.13.2</com.fasterxml.jackson>
        <de.danielbechler.java-object-diff>0.95</de.danielbechler.java-object-diff>
        <io.github.adr.e-adr.version>1.0.0</io.github.adr.e-adr.version>
        <org.apache.commons.configuration>2.3</org.apache.commons.configuration>
        <org.eclipse.jdt.annotation>2.1.0</org.eclipse.jdt.annotation>
        <org.eclipse.jgit.version>5.7.0.202003110725-r</org.eclipse.jgit.version>
        <org.mockito.moickito-core.version>2.19.0</org.mockito.moickito-core.version>
        <org.jgrapht.jgrapht-core.version>1.3.1</org.jgrapht.jgrapht-core.version>
        <org.web3j.version>4.8.9</org.web3j.version>
        <org.web3j.web3j-maven-plugin.version>4.8.7</org.web3j.web3j-maven-plugin.version>
        <org.apache.commons-lang3.version>3.7</org.apache.commons-lang3.version>
        <org.apache.commons.compress.version>1.19</org.apache.commons.compress.version>
        <commons-codec>1.11</commons-codec>
        <org.xmlunit>2.6.4</org.xmlunit>
        <org.skyscreamer.jsonassert>1.5.0</org.skyscreamer.jsonassert>
        <io.rest-assured>5.3.0</io.rest-assured>
        <xerces.xercesImpl.version>2.12.0</xerces.xercesImpl.version>
        <snakeyaml.version>1.25</snakeyaml.version>
        <edmm.version>7f550a1915</edmm.version>
        <tika.version>1.26</tika.version>

        <!-- grouped libraries -->
        <org.apache.cxf.version>2.7.6</org.apache.cxf.version>
        <org.slf4j>1.7.25</org.slf4j>
        <org.glassfish.jxb>2.4.0-b180830.0438</org.glassfish.jxb>
        <javax.xml.bind>2.4.0-b180725.0427</javax.xml.bind>

        <junit.jupiter.version>5.8.2</junit.jupiter.version>
        <junit.platform.version>1.3.2</junit.platform.version>

        <jersey.version>2.37</jersey.version>
        <org.eclipse.persistence>2.7.6</org.eclipse.persistence>
    </properties>
    <profiles>
        <profile>
            <id>all</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>org.eclipse.winery.accountability</module>
                <module>org.eclipse.winery.bpmn4tosca.converter.tobpel</module>
                <module>org.eclipse.winery.cli</module>
                <module>org.eclipse.winery.common</module>
                <module>org.eclipse.winery.compliance</module>
                <module>org.eclipse.winery.crawler</module>
                <module>org.eclipse.winery.edmm</module>
                <module>org.eclipse.winery.generators.ia</module>
                <module>org.eclipse.winery.highlevelrestapi</module>
                <module>org.eclipse.winery.model</module>
                <module>org.eclipse.winery.model.adaptation</module>
                <module>org.eclipse.winery.model.bpmn4tosca</module>
                <module>org.eclipse.winery.model.csar.toscametafile</module>
                <module>org.eclipse.winery.model.extension</module>
                <module>org.eclipse.winery.model.threatmodeling</module>
                <module>org.eclipse.winery.reporting</module>
                <module>org.eclipse.winery.repository</module>
                <module>org.eclipse.winery.repository.client</module>
                <module>org.eclipse.winery.repository.rest</module>
                <module>org.eclipse.winery.topologygraph</module>
                <module>org.eclipse.winery.tools.copybaragenerator</module>
                <module>org.eclipse.winery.tools.deployablecomponents</module>
                <module>org.eclipse.winery.frontends</module>
            </modules>
        </profile>
        <profile>
            <id>frontend</id>
            <modules>
                <module>org.eclipse.winery.frontends</module>
            </modules>
        </profile>
        <profile>
            <id>java</id>
            <modules>
                <module>org.eclipse.winery.accountability</module>
                <module>org.eclipse.winery.bpmn4tosca.converter.tobpel</module>
                <module>org.eclipse.winery.cli</module>
                <module>org.eclipse.winery.common</module>
                <module>org.eclipse.winery.compliance</module>
                <module>org.eclipse.winery.crawler</module>
                <module>org.eclipse.winery.edmm</module>
                <module>org.eclipse.winery.generators.ia</module>
                <module>org.eclipse.winery.highlevelrestapi</module>
                <module>org.eclipse.winery.model</module>
                <module>org.eclipse.winery.model.adaptation</module>
                <module>org.eclipse.winery.model.bpmn4tosca</module>
                <module>org.eclipse.winery.model.csar.toscametafile</module>
                <module>org.eclipse.winery.model.extension</module>
                <module>org.eclipse.winery.model.threatmodeling</module>
                <module>org.eclipse.winery.reporting</module>
                <module>org.eclipse.winery.repository</module>
                <module>org.eclipse.winery.repository.client</module>
                <module>org.eclipse.winery.repository.rest</module>
                <module>org.eclipse.winery.topologygraph</module>
                <module>org.eclipse.winery.tools.copybaragenerator</module>
                <module>org.eclipse.winery.tools.deployablecomponents</module>
            </modules>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <configuration>
                    <append>${jacoco.append}</append>
                    <destFile>${jacoco.reportPath}</destFile>
                </configuration>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.4.1</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
